@@ -27,6 +27,8 @@ changes relative to sbcl-1.3.17:
     directory, as is permitted: "Whenever a pathname is constructed
     the components may be canonicalized if appropriate."
   * optimization: various printer and FORMAT performance enhancements.
+  * bug fix: GET-FOREGROUND no longer fails in case all other interactive
+    threads exit (lp#1682671, reported by Syll)
 
 changes in sbcl-1.3.17 relative to sbcl-1.3.16:
   * enhancement: memory overhead from the garbage collector's metadata
